<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  	  <View 
  	android:layout_width="fill_parent"
  	android:layout_height="1dip"
  	android:background="@color/color_white"/>
    <ScrollView    
        xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"> 
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  		  android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:orientation="vertical">
  		    	
 <EditText
  	android:id="@+id/edittext_name"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:hint="@string/addunderctrl_inputname"
  	android:layout_marginTop="15dip"
  	android:layout_marginLeft="30dip"
  	android:layout_marginRight="30dip"/>
  <EditText
  	android:id="@+id/edittext_number"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:hint="@string/addunderctrl_inputnumber"
  	android:layout_marginTop="15dip"
  	android:layout_marginLeft="30dip"
  	android:layout_marginRight="30dip"
  	android:layout_marginBottom="20dip"
  	android:numeric="integer"/>
  	
  <EditText
  	android:id="@+id/edittext_ctrlpwd"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:hint="@string/changehost_inputctrlpwd"
  	android:layout_marginLeft="30dip"
  	android:layout_marginRight="30dip"
  	android:layout_marginBottom="20dip"
  	android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIGJKLMNOPQRSTUVWXYZ1234567890"
  	android:visibility="gone"/>
  	
  	</LinearLayout>
  	</ScrollView>
</LinearLayout>
