<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <View 
  	android:layout_width="fill_parent"
  	android:layout_height="1dip"
  	android:background="@color/color_white"/>
    <ScrollView    
        xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"> 
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  		  android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:orientation="vertical">
  <EditText
  	android:id="@+id/edittext_logemailaddress"
  	android:layout_width="fill_parent"
  	android:layout_height="30dip"
  	android:layout_marginTop="15dip"
  	android:layout_marginLeft="30dip"
  	android:layout_marginRight="30dip"
  	android:editable="false"
  	android:focusable="false"
  	android:background="@color/color_gray"/>
  <EditText
  	android:id="@+id/edittext_logemailpwd"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:hint="在此输入邮箱密码"
  	android:layout_marginTop="15dip"
  	android:layout_marginLeft="30dip"
  	android:layout_marginRight="30dip"
  	android:layout_marginBottom="20dip"
  	android:password="true"/>
  	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
  		android:stretchColumns="0,1">
  		<TableRow>
  		    <CheckBox
                 android:id="@+id/checkbox_logsaveemailpwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
  		         android:layout_marginLeft="20dip"
  		         android:layout_marginRight="20dip"
  		         android:layout_marginBottom="20dip"         
                 android:text="@string/emaillog_savepwd"/>
              <CheckBox
                 android:id="@+id/checkbox_logemailautologin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
  		         android:layout_marginLeft="20dip"
  		         android:layout_marginRight="20dip"    
  		         android:layout_marginBottom="20dip"               
                 android:text="@string/emaillog_autologin"/>  
        </TableRow>
  <View 
  	android:layout_width="fill_parent"
  	android:layout_height="1dip"
  	android:layout_marginBottom="5dip"
  	android:background="@color/color_yellow"/>          
  		<TableRow>
  		  <Button
  			android:id="@+id/button_emailLogSure"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/emaillog_btntext"
  			android:layout_marginLeft="5dip"
  			android:layout_column="0" />
  		  <Button
  			android:id="@+id/button_emailLogCancle"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginRight="5dip"
  			android:text="@string/ctrl_cancle"
  			android:layout_column="1" />  
  		</TableRow>
  		</TableLayout>
  	  	</LinearLayout>
  	</ScrollView>
</LinearLayout>
