<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">

  <View 
  	android:layout_width="fill_parent"
  	android:layout_height="1dip"
  	android:background="@color/color_white"/>
    <ScrollView    
        xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"> 
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  		  android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:orientation="vertical">
  		    	
  <EditText
  	android:id="@+id/edittext_hostemail"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:hint="@string/changehost_inputemail"
  	android:layout_marginTop="15dip"
  	android:layout_marginLeft="30dip"
  	android:layout_marginRight="30dip"
  	android:layout_marginBottom="20dip"/>
  <View 
  	android:layout_width="fill_parent"
  	android:layout_height="1dip"
  	android:layout_marginBottom="5dip"
  	android:background="@color/color_yellow"/>  	
  <!--  
  <EditText
  	android:id="@+id/edittext_ctrlpwd"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:hint="@string/changehost_inputctrlpwd"
  	android:layout_marginTop="15dip"
  	android:layout_marginLeft="30dip"
  	android:layout_marginRight="30dip"
  	android:layout_marginBottom="20dip"/>

		   <RadioGroup
              android:id="@+id/RadioGroup_changehost"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <RadioButton
                 android:id="@+id/RadioButton_tellthis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
  		         android:layout_marginLeft="20dip"
  		         android:layout_marginRight="20dip"      
                 android:text="@string/changehost_tellthis"/>
              <RadioButton
                 android:id="@+id/RadioButton_tellall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dip"
  		         android:layout_marginLeft="20dip"
  		         android:layout_marginRight="20dip"    
                 android:text="@string/changehost_tellall"/>  
              <RadioButton
                 android:id="@+id/RadioButton_tellall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dip"
  		         android:layout_marginLeft="20dip"
  		         android:layout_marginRight="20dip"    
  		         android:layout_marginBottom="20dip"               
                 android:text="@string/changehost_tellnobody"/>                 
         </RadioGroup>   
-->	  	
  	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
  		android:stretchColumns="0,1">
  		<TableRow>
  		
  		  <Button
  			android:id="@+id/button_changeSure"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/ctrl_save"
  			android:layout_marginLeft="5dip"
  			android:layout_column="0" />
  		
  		
  		  <Button
  			android:id="@+id/button_changeCancle"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginRight="5dip"
  			android:text="@string/ctrl_cancle"
  			android:layout_column="1" />  
  		</TableRow>
  		
  		</TableLayout>
  	  	</LinearLayout>
  	</ScrollView>
</LinearLayout>
